<resources>
    <string name="app_name">BBT</string>

    <string-array name="english_week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string name="list_dialog_title">Dynamic Update</string>

    <string name="func_dialog_title">Function</string>

    <string-array name="list_dialog_items">
        <item>Change week start with sun</item>
        <item>Change week start with mon</item>
        <item>Change week start with sat</item>
        <item>Change select mode：single/default</item>
        <item>Change month and week view with CustomView</item>
        <item>MonthViewShowMode：all</item>
        <item>MonthViewShowMode：only_current</item>
        <item>MonthViewShowMode：fix</item>
    </string-array>

    <string-array name="func_dialog_items">
        <item>Expand CalendarLayout</item>
        <item>Shrink CalendarLayout</item>
        <item>scrollToPre</item>
        <item>scrollToNext</item>
        <item>scrollToCurrent</item>
        <item>Limit calendar range</item>
        <item>Show range</item>
    </string-array>

    <string name="symbol_sexy">〇</string>
    <string name="symbol_blood_much">XX</string>
    <string name="symbol_blood_common">X</string>
    <string name="symbol_blood_little">·</string>
    <string name="symbol_blood_bit">∘</string>
    <string name="symbol_doctor_start">▲</string>
    <string name="symbol_doctor_end">▼</string>

    <string name="symbol_love">❤</string>

    <string name="symbol_tips">O  表示有性生活\nXX 表示经期血量大\nX  表示经期血量小\n·  表示血量很少\n∘  表示点滴流血\n▲  表示治疗开始\n▼  表示治疗结束\n\n开发者邮箱：1073273116@qq.com\n(有宝贵建议请发邮件)</string>

</resources>