<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <cn.dahuoji.body_temperature.skinview.TTFTextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:text="2021年03月"
        android:textColor="@color/pool_text_color_hard"
        android:textSize="20sp"
        android:textStyle="bold" />

    <cn.dahuoji.body_temperature.skinview.SkinImageView
        android:id="@+id/iconPrint"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/icon_print_back"
        android:padding="6dp"
        android:src="@mipmap/icon_print"
        android:tint="@color/text_color_white" />

    <cn.dahuoji.body_temperature.skinview.SkinImageView
        android:id="@+id/iconTips"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@+id/iconPrint"
        android:background="@drawable/icon_tips_back"
        android:padding="6dp"
        android:src="@mipmap/icon_tips_bold"
        android:tint="@color/text_color_white" />


    <cn.dahuoji.body_temperature.skinview.SkinLinearLayout
        android:id="@+id/weekTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleText"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            style="@style/week_day_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="日"
            android:textColor="@color/pool_text_color_light" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            style="@style/week_day_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="一"
            android:textColor="@color/pool_text_color_light" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            style="@style/week_day_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="二"
            android:textColor="@color/pool_text_color_light" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            style="@style/week_day_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="三"
            android:textColor="@color/pool_text_color_light" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            style="@style/week_day_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="四"
            android:textColor="@color/pool_text_color_light" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            style="@style/week_day_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="五"
            android:textColor="@color/pool_text_color_light" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            style="@style/week_day_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="六"
            android:textColor="@color/pool_text_color_light" />

    </cn.dahuoji.body_temperature.skinview.SkinLinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/weekTitleLayout" />

    <cn.dahuoji.body_temperature.skinview.TTFTextView
        android:id="@+id/selectDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewPager"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="2021年3月10号"
        android:textColor="@color/pool_text_color_hard"
        android:textSize="12sp"
        android:textStyle="italic" />

    <cn.dahuoji.body_temperature.skinview.TTFTextView
        android:id="@+id/temperatureValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewPager"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="00.00"
        android:textColor="@color/common_red"
        android:textSize="12sp"
        android:textStyle="italic" />

    <RelativeLayout
        android:id="@+id/rulerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectDateText"
        android:layout_marginTop="5dp">

        <cn.dahuoji.body_temperature.Ruler
            android:id="@+id/ruler"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#11333333"
            android:paddingBottom="10dp" />

        <cn.dahuoji.body_temperature.skinview.SkinCommonView
            android:layout_width="1dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:alpha="0.7"
            android:background="#FFFF33" />

        <cn.dahuoji.body_temperature.skinview.SkinCommonView
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:background="@drawable/white_fade_left" />

        <cn.dahuoji.body_temperature.skinview.SkinCommonView
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/white_fade_right" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/extrasLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/rulerLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            android:id="@+id/btnSexy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/extras_item_back_n"
            android:gravity="center"
            android:text="@string/symbol_sexy"
            android:textColor="@color/text_color_white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <cn.dahuoji.body_temperature.skinview.SkinCommonView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/pool_separate_line_color" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            android:id="@+id/btnBloodMuch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/extras_item_back_n"
            android:gravity="center"
            android:text="@string/symbol_blood_much"
            android:textColor="@color/text_color_white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            android:id="@+id/btnBloodCommon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/extras_item_back_n"
            android:gravity="center"
            android:text="@string/symbol_blood_common"
            android:textColor="@color/text_color_white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            android:id="@+id/btnBloodLittle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/extras_item_back_n"
            android:gravity="center"
            android:text="@string/symbol_blood_little"
            android:textColor="@color/text_color_white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            android:id="@+id/btnBloodBit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/extras_item_back_n"
            android:gravity="center"
            android:text="@string/symbol_blood_bit"
            android:textColor="@color/text_color_white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <cn.dahuoji.body_temperature.skinview.SkinCommonView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/pool_separate_line_color" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            android:id="@+id/btnDoctorStart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/extras_item_back_n"
            android:gravity="center"
            android:text="@string/symbol_doctor_start"
            android:textColor="@color/text_color_white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            android:id="@+id/btnDoctorEnd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/extras_item_back_n"
            android:gravity="center"
            android:text="@string/symbol_doctor_end"
            android:textColor="@color/text_color_white"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recordButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/extrasLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            android:id="@+id/btnRecord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/long_button_back_orange_selector"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="记录"
            android:textColor="@color/text_color_white"
            android:textSize="15sp" />

        <cn.dahuoji.body_temperature.skinview.TTFTextView
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/long_button_back_gray_selector"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="擦除"
            android:textColor="@color/text_color_white"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lineChartLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recordButtonsLayout"
        android:layout_marginTop="30dp">

        <cn.dahuoji.body_temperature.linechart.CommonLineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <cn.dahuoji.body_temperature.skinview.SkinLinearLayout
            android:id="@+id/toolTipsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/tool_tips_back"
            android:orientation="vertical"
            android:padding="9dp">

            <cn.dahuoji.body_temperature.skinview.TTFTextView
                android:id="@+id/toolTipsTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000-00-00"
                android:textColor="@color/text_color_white"
                android:textSize="10sp" />

            <cn.dahuoji.body_temperature.skinview.TTFTextView
                android:id="@+id/toolTipsValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="0.00000000"
                android:textColor="@color/text_color_white"
                android:textSize="10sp" />

        </cn.dahuoji.body_temperature.skinview.SkinLinearLayout>


    </RelativeLayout>

    <cn.dahuoji.body_temperature.SelectValueView
        android:id="@+id/selectValueView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rulerLayout"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btnLineChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewPager"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="折线图"
        android:textColor="#333"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <cn.dahuoji.body_temperature.skinview.SkinCommonView
        android:id="@+id/transBackTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/extrasLayout"
        android:background="@color/colorTransBack"
        android:visibility="gone" />

    <cn.dahuoji.body_temperature.skinview.SkinCommonView
        android:id="@+id/transBackBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/extrasLayout"
        android:layout_marginTop="10dp"
        android:background="@color/colorTransBack"
        android:visibility="gone" />

    <cn.dahuoji.body_temperature.skinview.TTFTextView
        android:id="@+id/extrasTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/extrasLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/symbol_tips"
        android:textColor="@color/text_color_white"
        android:textSize="13sp"
        android:visibility="gone" />

</RelativeLayout>
